attempt to list titles of all posts on the index page

--- a/business/blogpost.html
+++ b/business/blogpost.html
@@ -22,10 +22,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link rel="stylesheet" href="/css/main.css" type="text/css" />
+    <link rel="stylesheet" href="../../css/main.css" type="text/css" />
     <link
       rel="icon"
-      href="img/logo-w.svg"
+      href="../../img/logo-w.svg"
       sizes="16x16 32x32"
       type="image/svg"
     />
@@ -55,7 +55,21 @@
     </header>
     <!-- Post -->
     <div id="main" class="w3-row w3-grayscale">
-      <p>Coming soon</p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
+        praesentium maiores aspernatur, quam quae animi vel mollitia harum quas.
+        Quis aut dolore eaque repellendus corporis at quas expedita ipsa
+        architecto. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        Nam praesentium maiores aspernatur, quam quae animi vel mollitia harum
+        quas. Quis aut dolore eaque repellendus corporis at quas expedita ipsa
+        architecto. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        Nam praesentium maiores aspernatur, quam quae animi vel mollitia harum
+        quas. Quis aut dolore eaque repellendus corporis at quas expedita ipsa
+        architecto. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        Nam praesentium maiores aspernatur, quam quae animi vel mollitia harum
+        quas. Quis aut dolore eaque repellendus corporis at quas expedita ipsa
+        architecto.
+      </p>
     </div>
     <div>
       <br />
