--- a/business/index.html
+++ b/business/index.html
@@ -22,10 +22,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link rel="stylesheet" href="/css/main.css" type="text/css" />
+    <link rel="stylesheet" href="../../css/main.css" type="text/css" />
     <link
       rel="icon"
-      href="img/logo-w.svg"
+      href="../../img/logo-w.svg"
       sizes="16x16 32x32"
       type="image/svg"
     />
@@ -60,9 +60,7 @@
       <h1 class="w3-margin w3-jumbo w3-padding-64">Business and Politics</h1>
     </header>
     <!-- List of Blogposts -->
-    <div id="main" class="w3-row w3-grayscale">
-      <p>Coming soon</p>
-    </div>
+    <div id="main" class="w3-row w3-grayscale"></div>
     <div>
       <br />
       <hr />
