--- a/business/index.html
+++ b/business/index.html
@@ -146,6 +146,7 @@
     </footer>
     <script src="../../js/main.js"></script>
     <script src="../../js/sunTzuQuotes.js"></script>
+    <script src="index.js"></script>
 
     <!-- End page content -->
   </body>
