--- a/religion/blogpost.html
+++ b/religion/blogpost.html
@@ -42,14 +42,8 @@
       </div>
 
       <div class="w3-right w3-padding-32 w3-bar-item">
-        <div>
-          <a class="w3-button w3-hide-small" href="../business/index.html"
-            >Business and Politics</a
-          >
-          <a class="w3-button" href="../life/index.html">Life</a>
-          <a class="w3-button" href="../religion/index.html"
-            >Religion and Spirituality</a
-          >
+        <div class="w3-hide-small">
+          <a class="w3-button" href="index.html">Go back</a>
         </div>
       </div>
     </div>
@@ -57,10 +51,26 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- Header -->
     <header class="w3-container w3-black w3-center">
-      <h1 class="w3-margin w3-jumbo w3-padding-64">Business and Politics</h1>
+      <h1 class="w3-margin w3-jumbo w3-padding-large">Blogpost title!</h1>
     </header>
-    <!-- List of Blogposts -->
-    <div id="main" class="w3-row w3-grayscale"></div>
+    <!-- Post -->
+    <div id="main" class="w3-row w3-grayscale">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
+        praesentium maiores aspernatur, quam quae animi vel mollitia harum quas.
+        Quis aut dolore eaque repellendus corporis at quas expedita ipsa
+        architecto. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        Nam praesentium maiores aspernatur, quam quae animi vel mollitia harum
+        quas. Quis aut dolore eaque repellendus corporis at quas expedita ipsa
+        architecto. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        Nam praesentium maiores aspernatur, quam quae animi vel mollitia harum
+        quas. Quis aut dolore eaque repellendus corporis at quas expedita ipsa
+        architecto. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+        Nam praesentium maiores aspernatur, quam quae animi vel mollitia harum
+        quas. Quis aut dolore eaque repellendus corporis at quas expedita ipsa
+        architecto.
+      </p>
+    </div>
     <div>
       <br />
       <hr />
@@ -146,7 +156,6 @@
     </footer>
     <script src="../../js/main.js"></script>
     <script src="../../js/sunTzuQuotes.js"></script>
-    <script src="index.js"></script>
 
     <!-- End page content -->
   </body>
