--- a/religion/index.html
+++ b/religion/index.html
@@ -1,295 +1,153 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ominini Blog Template</title>
+    <title>Ominini</title>
+    <meta
+      name="description"
+      content="Official Portfolio of Ominini, a curation of his work and publications. Thanks for stopping by."
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Karma"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <style>
-      body,
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        font-family: "Karma", sans-serif;
-      }
-      .w3-bar-block .w3-bar-item {
-        padding: 20px;
-      }
-    </style>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="../../css/main.css" type="text/css" />
+    <link
+      rel="icon"
+      href="../../img/logo-w.svg"
+      sizes="16x16 32x32"
+      type="image/svg"
+    />
   </head>
-  <body>
-    <!-- Sidebar (hidden by default) -->
-    <nav
-      class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left"
-      style="display: none; z-index: 2; width: 40%; min-width: 300px"
-      id="mySidebar"
-    >
-      <a
-        href="javascript:void(0)"
-        onclick="w3_close()"
-        class="w3-bar-item w3-button"
-        >Close Menu</a
-      >
-      <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button"
-        >Food</a
-      >
-      <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button"
-        >About</a
-      >
-    </nav>
 
-    <!-- Top menu -->
-    <div class="w3-top">
-      <div class="w3-white w3-xlarge" style="max-width: 1200px; margin: auto">
-        <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-        <div class="w3-right w3-padding-16">Mail</div>
-        <div class="w3-center w3-padding-16">My Food</div>
+  <body translate="no" class="w3-content">
+    <br />
+    <!-- Navbar -->
+    <div class="w3-bar w3-padding-64">
+      <div class="w3-bar-item">
+        <a href="../../index.html"
+          ><img src="../../img/logo-b.png" alt="Ominini logo"
+        /></a>
+      </div>
+
+      <div class="w3-right w3-padding-32 w3-bar-item">
+        <div>
+          <a class="w3-button w3-hide-small" href="../business/index.html"
+            >Business and Politics</a
+          >
+          <a class="w3-button" href="../life/index.html">Life</a>
+          <a class="w3-button" href="../religion/index.html"
+            >Religion and Spirituality</a
+          >
+        </div>
       </div>
     </div>
 
-    <!-- !PAGE CONTENT! -->
-    <div
-      class="w3-main w3-content w3-padding"
-      style="max-width: 1200px; margin-top: 100px"
-    >
-      <!-- First Photo Grid-->
-      <div class="w3-row-padding w3-padding-16 w3-center" id="food">
-        <div class="w3-quarter">
-          <img
-            src="/w3images/sandwich.jpg"
-            alt="Sandwich"
-            style="width: 100%"
-          />
-          <h3>The Perfect Sandwich, A Real NYC Classic</h3>
-          <p>
-            Just some random text, lorem ipsum text praesent tincidunt ipsum
-            lipsum.
-          </p>
-        </div>
-        <div class="w3-quarter">
-          <img src="/w3images/steak.jpg" alt="Steak" style="width: 100%" />
-          <h3>Let Me Tell You About This Steak</h3>
-          <p>
-            Once again, some random text to lorem lorem lorem lorem ipsum text
-            praesent tincidunt ipsum lipsum.
-          </p>
-        </div>
-        <div class="w3-quarter">
-          <img
-            src="/w3images/cherries.jpg"
-            alt="Cherries"
-            style="width: 100%"
-          />
-          <h3>Cherries, interrupted</h3>
-          <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-          <p>What else?</p>
-        </div>
-        <div class="w3-quarter">
-          <img
-            src="/w3images/wine.jpg"
-            alt="Pasta and Wine"
-            style="width: 100%"
-          />
-          <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
-          <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        </div>
-      </div>
-
-      <!-- Second Photo Grid-->
-      <div class="w3-row-padding w3-padding-16 w3-center">
-        <div class="w3-quarter">
-          <img
-            src="/w3images/popsicle.jpg"
-            alt="Popsicle"
-            style="width: 100%"
-          />
-          <h3>All I Need Is a Popsicle</h3>
-          <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        </div>
-        <div class="w3-quarter">
-          <img src="/w3images/salmon.jpg" alt="Salmon" style="width: 100%" />
-          <h3>Salmon For Your Skin</h3>
-          <p>
-            Once again, some random text to lorem lorem lorem lorem ipsum text
-            praesent tincidunt ipsum lipsum.
-          </p>
-        </div>
-        <div class="w3-quarter">
-          <img
-            src="/w3images/sandwich.jpg"
-            alt="Sandwich"
-            style="width: 100%"
-          />
-          <h3>The Perfect Sandwich, A Real Classic</h3>
-          <p>
-            Just some random text, lorem ipsum text praesent tincidunt ipsum
-            lipsum.
-          </p>
-        </div>
-        <div class="w3-quarter">
-          <img
-            src="/w3images/croissant.jpg"
-            alt="Croissant"
-            style="width: 100%"
-          />
-          <h3>Le French</h3>
-          <p>
-            Lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.
-          </p>
-        </div>
-      </div>
-
-      <!-- Pagination -->
-      <div class="w3-center w3-padding-32">
-        <div class="w3-bar">
-          <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
-          <a href="#" class="w3-bar-item w3-black w3-button">1</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
-        </div>
-      </div>
-
-      <hr id="about" />
-
-      <!-- About Section -->
-      <div class="w3-container w3-padding-32 w3-center">
-        <h3>About Me, The Food Man</h3>
-        <br />
-        <img
-          src="/w3images/chef.jpg"
-          alt="Me"
-          class="w3-image"
-          style="display: block; margin: auto"
-          width="800"
-          height="533"
-        />
-        <div class="w3-padding-32">
-          <h4><b>I am Who I Am!</b></h4>
-          <h6><i>With Passion For Real, Good Food</i></h6>
-          <p>
-            Just me, myself and I, exploring the universe of unknownment. I have
-            a heart of love and an interest of lorem ipsum and mauris neque quam
-            blog. I want to share my world with you. Praesent tincidunt sed
-            tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae,
-            ultricies congue gravida diam non fringilla. Praesent tincidunt sed
-            tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae,
-            ultricies congue gravida diam non fringilla.
-          </p>
-        </div>
-      </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- Header -->
+    <header class="w3-container w3-black w3-center">
+      <h1 class="w3-margin w3-jumbo w3-padding-64">Business and Politics</h1>
+    </header>
+    <!-- List of Blogposts -->
+    <div id="main" class="w3-row w3-grayscale"></div>
+    <div>
+      <br />
       <hr />
-
-      <!-- Footer -->
-      <footer class="w3-row-padding w3-padding-32">
-        <div class="w3-third">
-          <h3>FOOTER</h3>
-          <p>
-            Praesent tincidunt sed tellus ut rutrum. Sed vitae justo
-            condimentum, porta lectus vitae, ultricies congue gravida diam non
-            fringilla.
-          </p>
-          <p>
-            Powered by
-            <a
-              href="https://www.w3schools.com/w3css/default.asp"
-              target="_blank"
-              >w3.css</a
-            >
-          </p>
-        </div>
-
-        <div class="w3-third">
-          <h3>BLOG POSTS</h3>
-          <ul class="w3-ul w3-hoverable">
-            <li class="w3-padding-16">
-              <img
-                src="/w3images/workshop.jpg"
-                class="w3-left w3-margin-right"
-                style="width: 50px"
+      <br />
+    </div>
+    <h2 class="w3-jumbo" id="contact">Stay in Touch</h2>
+    <!-- Subscribe section -->
+    <div id="subscribe" class="w3-container w3-black w3-padding-64">
+      <h1>Subscribe</h1>
+      <!-- Begin Mailchimp Signup Form -->
+      <div id="mc_embed_signup">
+        <form
+          action="https://ominini.us14.list-manage.com/subscribe/post?u=19131ba207553a340ec75a0e1&amp;id=ebfe9d8533"
+          method="post"
+          id="mc-embedded-subscribe-form"
+          name="mc-embedded-subscribe-form"
+          class="validate"
+          target="_blank"
+          novalidate
+        >
+          <div id="mc_embed_signup_scroll">
+            <label for="mce-EMAIL">Stay up to date.</label>
+            <br />
+            <br />
+            <input
+              type="email"
+              value=""
+              name="EMAIL"
+              class="w3-input w3-border"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              placeholder="example@email.com"
+              required
+            />
+            <br />
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px">
+              <input
+                type="email"
+                name="b_19131ba207553a340ec75a0e1_ebfe9d8533"
+                class="form-control"
+                id="exampleInputEmail1"
+                tabindex="-1"
+                value=""
               />
-              <span class="w3-large">Lorem</span><br />
-              <span>Sed mattis nunc</span>
-            </li>
-            <li class="w3-padding-16">
-              <img
-                src="/w3images/gondol.jpg"
-                class="w3-left w3-margin-right"
-                style="width: 50px"
+            </div>
+
+            <div class="clear">
+              <input
+                type="submit"
+                value="Subscribe"
+                name="subscribe"
+                id="mc-embedded-subscribe"
+                class="w3-button w3-cyan w3-margin-bottom"
               />
-              <span class="w3-large">Ipsum</span><br />
-              <span>Praes tinci sed</span>
-            </li>
-          </ul>
-        </div>
-
-        <div class="w3-third w3-serif">
-          <h3>POPULAR TAGS</h3>
-          <p>
-            <span class="w3-tag w3-black w3-margin-bottom">Travel</span>
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >New York</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Dinner</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Salmon</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >France</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Drinks</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Ideas</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Flavors</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Cuisine</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Chicken</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Dressing</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Fried</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Fish</span
-            >
-            <span class="w3-tag w3-dark-grey w3-small w3-margin-bottom"
-              >Duck</span
-            >
-          </p>
-        </div>
-      </footer>
-
-      <!-- End page content -->
+            </div>
+          </div>
+        </form>
+      </div>
+      <!--End mc_embed_signup-->
     </div>
 
-    <script>
-      // Script to open and close sidebar
-      function w3_open() {
-        document.getElementById("mySidebar").style.display = "block";
-      }
+    <div class="w3-padding-64 w3-light-grey w3-small w3-center">
+      <h4>Contact</h4>
+      <p>Questions? Go ahead and send an email:</p>
+      <a
+        href="https://aemail.com/Wn7E"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <i class="fa fa-envelope w3-margin-right"></i>
+      </a>
+    </div>
+    <!-- Footer -->
+    <footer id="footer" class="w3-center w3-padding-32">
+      <figure id="displayQuote" class="text-center">
+        <blockquote class="blockquote">
+          <p id="randomQuote"></p>
+        </blockquote>
+        <figcaption id="quoteAuthor" class="blockquote-footer"></figcaption>
+      </figure>
+      <p id="copyright"></p>
+    </footer>
+    <script src="../../js/main.js"></script>
+    <script src="../../js/sunTzuQuotes.js"></script>
+    <script src="index.js"></script>
 
-      function w3_close() {
-        document.getElementById("mySidebar").style.display = "none";
-      }
-    </script>
+    <!-- End page content -->
   </body>
 </html>
